added new comments explaning mre details and added new logic

--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
 			<div class="row">
 				<div class="col-md-12 text-center">
 					<h1>Psychic</h1>
+					<h4>What letter am I thinking of....?</h4>
 					 
 				</div>
 			</div>
@@ -21,9 +22,9 @@
 
 				<div class="col-md-2 text-center">
 				</div>
-				<p>Number of Guesses Left: <span id="numberGuesses"></span> </p>
-				<p>Number of Losses: <span id="losses"></span> </p>
-				<p>Number of Wins: <span id="wins"></span> </p>
+				<p>Number of losses: <span id="losses"></span> </p>
+				<p>Number of wins: <span id="wins"></span> </p>
+				<p>Number of guesses left: <span id="numberGuesses"></span> </p>
 				<p>Letters guessed: <span id="lettersGuessed"></span> </p>
 				<div class="col-md-2">
 				</div>
