added images and some styling

--- a/index.html
+++ b/index.html
@@ -4,14 +4,21 @@
 	<title>Psychic Game</title>
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
 </head>
+	<style>
+	body {
+		 background-image: url(https://media.giphy.com/media/kQhUPXA1I3ECA/giphy.gif);
+		 color: lightgray;
+		}
+	</style>
 <body>
 	
 	
 		<div class="container">
 			<div class="row">
 				<div class="col-md-12 text-center">
-					<h1>Psychic</h1>
-					<h4>What letter am I thinking of....?</h4>
+					<p><img src="https://media.giphy.com/media/3SrfNw1HsEz0k/giphy.gif" alt="Psychic"/></p>
+					<h3>What letter am I thinking of....?</h3>
+					<h5>(Press any key to begin)</h5>
 					 
 				</div>
 			</div>
@@ -20,13 +27,13 @@
 				<div class="col-md-4">
 				</div>
 
-				<div class="col-md-2 text-center">
-				</div>
+				<div class="col-md-4 text-center">
+				<p><img src="https://media4.giphy.com/media/13fTIRP1fBCH5u/giphy.gif" alt="Psychic Lady"/></p>
 				<p>Number of losses: <span id="losses"></span> </p>
 				<p>Number of wins: <span id="wins"></span> </p>
 				<p>Number of guesses left: <span id="numberGuesses"></span> </p>
 				<p>Letters guessed: <span id="lettersGuessed"></span> </p>
-				<div class="col-md-2">
+				
 				</div>
 
 				<div class="col-md-4">
